--- a/style.css
+++ b/style.css
@@ -9,3 +9,9 @@
     @apply rounded-lg;
   }
 }
+  
+.bg-gradient{
+  background: #000428; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #000428, #004e92); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #000428, #004e92);
+}
